# worldCup2026

./: .env.example  .gitignore  METHODOLOGY.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
config/: default.yaml
scripts/: backtest_window.py  build_accas.py  calibrate.py  check_multi.py  clv_demo.py  example.py  find_multis.py  find_value.py  resim_current_state.py
src/worldcup2026/: __init__.py
src/worldcup2026/betting/: __init__.py  acca.py  blend.py  clv.py  correct_score.py  edge.py  markets.py  odds.py
src/worldcup2026/data/: __init__.py  betfair.py  loaders.py  odds.py
src/worldcup2026/evaluation/: __init__.py  backtest.py  calibration.py  metrics.py
src/worldcup2026/models/: __init__.py  dixon_coles.py
src/worldcup2026/ratings/: __init__.py  elo.py
src/worldcup2026/simulation/: __init__.py  bracket.py  tournament.py
tests/: test_calibration.py  test_clv.py  test_correct_score.py  test_edge.py  test_markets.py  test_smoke.py
